# 0001_iostream_test
add_executable(0001_iostream_test 0001_iostream_test.cpp)

target_link_libraries(
    0001_iostream_test
    stdc++
    _gtest_main
)

# 0002_fstream_test
add_executable(0002_fstream_test 0002_fstream_test.cpp)

target_link_libraries(
    0002_fstream_test
    stdc++
    _gtest_main
)

# 0003_stringstream_test
add_executable(0003_stringstream_test 0003_stringstream_test.cpp)

target_link_libraries(
    0003_stringstream_test
    stdc++
    _gtest_main
)